--- a/public/FAQ/CreateAccount.html
+++ b/public/FAQ/CreateAccount.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <script src="https://cdn.userway.org/widget.js" data-account="UGVjn51mMS"></script>
   <style>
     body {
       background: linear-gradient(135deg, #e0e7ff 0%, #f3e8ff 100%);
