--- a/public/store.html
+++ b/public/store.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>חנות המשחק - Jumpi Games</title>
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/custom-emojis.css">
       <style>
       body {
         background: #f6f8fa;
@@ -301,7 +302,7 @@
     </div>
     
     <div id="authMessage" class="auth-message" style="display: none;">
-      <div class="auth-icon">🔐</div>
+      <div class="auth-icon"><i class="fas fa-lock" style="color: #e74c3c; font-size: 1.2em;"></i></div>
       <h2>נדרשת התחברות</h2>
       <p>עליך להתחבר כדי לרכוש חבילות מהחנות</p>
       <a href="/login.html" class="login-btn">התחבר עכשיו</a>
