Add new emojis: very-happy, devil, and crying to emoji panel and memory game

--- a/public/game.html
+++ b/public/game.html
@@ -1874,6 +1874,9 @@
         <button class="emoji-btn" data-emoji="angry"><div class="custom-emoji emoji-angry"></div></button>
         <button class="emoji-btn" data-emoji="laugh"><div class="custom-emoji emoji-laugh"></div></button>
         <button class="emoji-btn" data-emoji="heart"><div class="custom-emoji emoji-heart"></div></button>
+        <button class="emoji-btn" data-emoji="very-happy"><div class="custom-emoji emoji-very-happy"></div></button>
+        <button class="emoji-btn" data-emoji="devil"><div class="custom-emoji emoji-devil"></div></button>
+        <button class="emoji-btn" data-emoji="crying"><div class="custom-emoji emoji-crying"></div></button>
     </div>
 
     <!-- Chat History Panel -->
@@ -4177,7 +4180,10 @@
                 'heart': '❤️',
                 'star': '⭐',
                 'diamond': '💎',
-                'flower': '🌸'
+                'flower': '🌸',
+                'very-happy': '😄',
+                'devil': '😈',
+                'crying': '😢'
             };
             
             const emojiChar = emojiChars[type];
