--- a/public/games/memory.html
+++ b/public/games/memory.html
@@ -234,7 +234,7 @@
     const finalScoreElement = document.getElementById('finalScore');
     const finalTimeElement = document.getElementById('finalTime');
 
-    const emojis = ['happy', 'sad', 'angry', 'laugh', 'heart', 'star', 'diamond', 'flower'];
+    const emojis = ['happy', 'sad', 'angry', 'laugh', 'heart', 'star', 'diamond', 'flower', 'very-happy', 'devil', 'crying'];
     let cards = [];
     let flippedCards = [];
     let matchedPairs = 0;
@@ -286,7 +286,7 @@
       
       // Display custom emoji or fallback to text
       const emoji = card.dataset.emoji;
-      if (['happy', 'sad', 'angry', 'laugh', 'heart', 'star', 'diamond', 'flower'].includes(emoji)) {
+      if (['happy', 'sad', 'angry', 'laugh', 'heart', 'star', 'diamond', 'flower', 'very-happy', 'devil', 'crying'].includes(emoji)) {
         card.innerHTML = `<div class="custom-emoji emoji-${emoji}"></div>`;
       } else {
         card.textContent = emoji;
