Add public API for store items so all users can view store; update game.html to use it

--- a/public/game.html
+++ b/public/game.html
@@ -2835,8 +2835,8 @@
         }
         
         function loadStoreItems() {
-            // Load store items from database
-            fetch('/admin/store-items')
+            // Load store items from database using public API
+            fetch('/api/store-items')
                 .then(response => response.json())
                 .then(data => {
                     storeItems = data.items || [];
